# solana-mcp

./: .dockerignore  .pre-commit-config.yaml  .tool-versions  API_DOCUMENTATION.md  Dockerfile  LICENSE  MANIFEST.in  PYTHON_VERSION.md  Procfile  README.md  app.py  conftest.py  docker-compose.yml  extract_test_output.py  main.py  pyproject.toml  pytest.ini  requirements-dev.txt  requirements-test.txt  requirements.txt  set_api_keys.py  setup.py  solana_whale_detector.py  test_analyzer.py  test_analyzer_wallets.py  test_server.py
api/: __init__.py  analyzer_routes.py  error_handlers.py  routes.py
core/: __init__.py  analyzer.py  solana.py
examples/: get_transaction.py
models/: context.py
scripts/: docker-build.sh  fresh_wallet_detector_cli.py  whale_detector_cli.py
solana_mcp/: __init__.py  __main__.py  analysis.py  app.py  cache.py  config.py  constants.py  decorators.py  defi.py  dependencies.py  liquidity_analyzer.py  logging_config.py  main.py  monitoring.py  name_service.py  portfolio.py  rpc_utils.py  semantic_analysis.py  semantic_search.py  server.py  server_refactored.py  session.py  solana_client.py  token_analyzer.py  token_categorizer.py  token_risk_analyzer.py  transactions.py  wallet_classifier.py  websocket.py
solana_mcp/api/: __init__.py  endpoints.py  error_handling.py
solana_mcp/api_docs/: README.md  wallet_classifier.md
solana_mcp/api_routes/: __init__.py  liquidity_analysis.py  token_analysis.py  token_risk_analysis.py
solana_mcp/clients/: __init__.py  account_client.py  base_client.py  market_client.py  solana_client.py  token_client.py  transaction_client.py
solana_mcp/handlers/: program_handler.py
solana_mcp/middleware/: error_handler.py
solana_mcp/models/: __init__.py  api_models.py  errors.py  requests.py  responses.py  token.py
solana_mcp/nlp/: __init__.py  formatter.py  parser.py  patterns.py
solana_mcp/programs/: program_handler.py
solana_mcp/resources/: __init__.py  account.py  network.py  nft.py  program.py  token.py  transaction.py
solana_mcp/routes/: __init__.py  accounts.py  analysis.py  nlp.py  tokens.py  transactions.py
solana_mcp/scripts/: consolidated_tests.py  find_decorator_imports.py  run_api_server.py  run_tests.py  simple_whale_test.py  test_token_risk_apis.py  token_info_cli.py  token_whale_analyzer.py  whale_detector_test.py
solana_mcp/services/: __init__.py  account_service.py  analysis_service.py  base_service.py  cache_service.py  market_service.py  nlp_service.py  rpc_service.py  token_service.py  transaction_service.py
solana_mcp/tests/: test_token_risk_analyzer.py
solana_mcp/utils/: __init__.py  api_response.py  (+14 more)
test/: __init__.py  conftest.py  run_tests.py
tests/: api_test_plan.md  conftest.py  run_all_tests.py  run_tests.py  scripts_test_token_metadata.py  test_all.sh  test_api_http.py  test_api_routes.py  test_decorators.py  test_fix.py  test_rest_api.py  test_solana_client.py  test_token_metadata.py  test_token_models.py
utils/: __init__.py  logging.py
(+22 files in other folders)
