[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "solana-mcp-server"
version = "0.1.0"
description = "Model Context Protocol server for Solana"
readme = "README.md"
requires-python = ">=3.9"
license = {file = "LICENSE"}
dependencies = [
    "mcp>=0.1.0",
    "anyio",
    "click",
    "httpx",
    "uvicorn",
    "starlette",
    "solana",
]

[project.optional-dependencies]
dev = [
    "black",
    "isort",
    "mypy",
    "pytest",
    "pytest-asyncio",
]

[tool.hatch.build.targets.wheel]
packages = ["solana_mcp"]

[tool.black]
line-length = 88
target-version = ["py310"]

[tool.isort]
profile = "black"
line_length = 88

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true

[project.scripts]
solana-mcp = "solana_mcp.__main__:main" 