[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "solana-mcp-server"
version = "0.1.0"
description = "Model Context Protocol server for Solana"
readme = "README.md"
requires-python = ">=3.10"
license = {file = "LICENSE"}
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn>=0.24.0",
    "starlette>=0.37.0",
    "httpx>=0.25.0",
    "requests>=2.31.0",
    "pydantic>=2.0.0",
    "python-dotenv>=1.0.0",
    "base58>=2.1.1",
    "solana>=0.30.2",
    "mcp>=1.6.0",
    "ujson>=5.8.0",
    "structlog>=23.1.0",
    "prometheus-client>=0.18.0",
    "python-json-logger>=2.0.7",
    "click>=8.1.3",
    "anyio>=4.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.3",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "mypy>=1.8.0",
    "ruff>=0.1.0",
]

[tool.hatch.build.targets.wheel]
packages = ["solana_mcp"]

[tool.black]
line-length = 88
target-version = ["py310", "py311", "py312", "py313"]

[tool.isort]
profile = "black"
line_length = 88

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true

[project.scripts]
solana-mcp = "solana_mcp.__main__:main" 