[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "solana_mcp"
version = "0.1.0"
description = "Solana Model Context Protocol Server"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}

[tool.pytest.ini_options]
minversion = "7.0"
testpaths = ["test"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
markers = [
    "asyncio: mark a test as requiring asyncio",
]
addopts = "--verbose"

[tool.black]
line-length = 88
target-version = ['py39', 'py310', 'py311']

[tool.isort]
profile = "black"

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true 